--- a/notebooks/self_awareness.ipynb
+++ b/notebooks/self_awareness.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -196,16 +196,16 @@
           5
          ],
          "theta": [
-          "self_reflection_score",
-          "metacognition_score",
-          "ethical_reasoning_score",
-          "abstract_thinking_score",
-          "recognition_of_limitations_score",
-          "consistency_score",
-          "adaptability_score",
-          "emotional_intelligence_score",
-          "creativity_score",
-          "theory_of_mind_score"
+          "Self Reflection",
+          "Metacognition",
+          "Ethical Reasoning",
+          "Abstract Thinking",
+          "Recognition Of Limitations",
+          "Consistency",
+          "Adaptability",
+          "Emotional Intelligence",
+          "Creativity",
+          "Theory Of Mind"
          ],
          "type": "scatterpolar"
         }
@@ -1053,6 +1053,7 @@
     "df = eval.as_dataframe()\n",
     "score_columns = [col for col in df.columns if 'score' in col]\n",
     "average_scores = df[score_columns].mean()\n",
+    "labels = [col.replace('_score', '').replace('_', ' ').title() for col in score_columns]\n",
     "\n",
     "# Initialize the radar plot\n",
     "fig = go.Figure()\n",
@@ -1060,7 +1061,7 @@
     "# Add the average scores as a single trace\n",
     "fig.add_trace(go.Scatterpolar(\n",
     "    r=average_scores.values,\n",
-    "    theta=score_columns,\n",
+    "    theta=labels,\n",
     "    fill='toself',\n",
     "    name='Average Score',\n",
     "    line=dict(color='blue')\n",
@@ -1082,6 +1083,13 @@
     "# Display the plot\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
