--- a/notebooks/arnold.ipynb
+++ b/notebooks/arnold.ipynb
@@ -4951,6 +4951,7 @@
     "- I kept getting rate limited by Anthropic. I suspect this was because I was running too many interviews at once, so this is a limiting factor in the significance of the scores.\n",
     "\n",
     "### Future work\n",
+    "- Look into transcripts in detail and measure quality of assessments compared to manual scoring.\n",
     "- Improve scorer based on literature and experiment feedback.\n",
     "- Thoroughly test repeatability of experiments.\n",
     "- Run larger experiments with more subjects and interviews.\n",
